<resources>
    <string name="app_name">PlayMusic</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_portfolio">PortfolioActivity</string>
    <string name="my_name">SHRAWAN KUMAR KESHARI</string>
    <string name="designation">Software Engineer, Paytm</string>
    <string name="Education">Educational Qualification: B.Tech from AKTU....see more</string>
    <string name="Technical">Technical Skill: C, Core JAVA, GIT ....see more</string>
    <string name="AndroidWork">Android Work: Developing Android application since May 2016 from
        learning perspective....see more</string>
    <string name="email">shrawankeshari19@gmail.com</string>
    <string name="Mobno">+91-8419818746</string>
    <string name="play_music">PLAY MUSIC</string>
    <string name="tag_line">Now Play Music Offline Online and Share with Friend\'s</string>
    <string name="title_activity_offline_music">OfflineMusicActivity</string>
    <string name="refresh_display">refresh_display</string>
    <string name="all">ALL</string>
    <string name="favorite">FAVORITE</string>
    <string name="portfolio">PORTFOLIO</string>
    <string name="offline_music">Offline Music</string>
    <string name="share">Share</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="stream_online">Stream Online</string>
    <string name="facebook_app_id">212659572635873</string>
    <string name="fb_login_protocol_scheme">fb212659572635873</string>
    <string name="title_activity_facebook">FacebookActivity</string>
    <string name="logout">LOGOUT</string>
    <string name="facebook_id">Facebook ID</string>
    <string name="name">Name</string>
    <string name="share_text">Share Text</string>
    <string name="search_by_name">Search (by name)</string>
    <string name="share_on_facebook_wall">share on facebook wall</string>
    <string name="noItemMsg">No item to display (share song on facebook)</string>
</resources>
