<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shrawankeshari.playmusic.StreamMusicActivity">

    <!--this item for refreshing the display and fetching the data from web to see if their
    is update in songs or not-->
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_autorenew"
        android:orderInCategory="0"
        android:title="@string/refresh_display"
        app:showAsAction="always" />

    <!--All Songs item for displaying the list of all available songs-->
    <item
        android:id="@+id/all_songs"
        android:orderInCategory="0"
        android:title="@string/all"
        app:showAsAction="always" />

    <!--favorite item for displaying the list of favorite songs-->
    <item
        android:id="@+id/favorite"
        android:orderInCategory="0"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <!--history item for displaying the list of history of songs listen by user-->
    <item
        android:id="@+id/history"
        android:orderInCategory="0"
        android:title="HISTORY"
        app:showAsAction="never" />

    <!--Portfolio item for displaying the detail about me and my work-->
    <item
        android:id="@+id/portfolio"
        android:orderInCategory="0"
        android:title="@string/portfolio"
        app:showAsAction="never" />

    <!--activity display the list songs available on the phone memory-->
    <item
        android:id="@+id/downloadedMusic"
        android:orderInCategory="100"
        android:title="@string/offline_music"
        app:showAsAction="never" />

</menu>
