<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.shrawankeshari.downloadmanager.MainActivity">

    <!--history item for displaying the list of history of songs listen by user-->
    <item
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orderInCategory="0"
        android:title="@string/history"
        app:showAsAction="never" />

    <!--favorite item for displaying the list of favorite songs-->
    <item
        android:id="@+id/favorite"
        android:orderInCategory="0"
        android:title="@string/favorite"
        app:showAsAction="never" />

    <!--option to user to share music with other person via WhatsApp, Bluetooth etc-->
    <item
        android:id="@+id/share"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="always" />

    <!--option to user to share music on Facebook-->
    <item
        android:id="@+id/fb_share"
        android:orderInCategory="100"
        android:title="@string/share_on_facebook"
        app:showAsAction="never" />

    <!--activity display the list songs fetched from the web-->
    <item
        android:id="@+id/portfolio"
        android:orderInCategory="100"
        android:title="@string/portfolio"
        app:showAsAction="never" />
</menu>
